# PullData

./: .env.example  .gitignore  .pre-commit-config.yaml  API_SUPPORT.md  CONTRIBUTING.md  Fixing Retrieval Pipeline.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  STATUS.md  STATUS_OLD.md  STEP2_COMPLETE.md  STEP3_COMPLETE.md  STEP4_COMPLETE.md  STEP6_COMPLETE.md  STEP7_COMPLETE.md  STYLED_PDF_SUMMARY.md  WEB_UI_STYLED_PDF.md  debug_retrieval.py  pyproject.toml  requirements.txt  run_server.py  setup.py  test_reload_fix.py  verify_install.py  verify_setup.py
.claude/: settings.local.json
configs/: default.yaml  lm_studio.yaml  lm_studio_api_embeddings.yaml  lm_studio_with_ocr.yaml  models.yaml
docs/: API_CONFIGURATION.md  CONFIG_GUIDE.md  CONFIG_QUICKSTART.md  EMBEDDING_API_ANALYSIS.md  FEATURES_STATUS.md  README.md  STYLED_PDF_GUIDE.md  VLM_OCR_GUIDE.md  WEB_UI_GUIDE.md
examples/: README.md  basic_usage.py  lm_studio_api_embeddings.py  lm_studio_config.py  output_formats_example.py  pdf_ingestion_example.py  query_with_output_formats.py  styled_pdf_example.py
examples/sample_data/: machine_learning_intro.txt  ml_intro.txt
examples_output/: financial_summary.json  financial_summary.md
output/: CAE DOCS_query_1766078870.md  CAE Docs_query_1766075772.md  CAENEW_query_1766107960.md  Projeck Baru_query_1766071504.md  output_demo_query_1766050292.md  output_demo_query_1766050304.json  test_query_1766053570.md  test_reload_query_1766071360.md
pulldata/: __init__.py
pulldata/cli/: __init__.py
pulldata/core/: __init__.py  config.py  datatypes.py  exceptions.py
pulldata/embedding/: __init__.py  api_embedder.py  cache.py  embedder.py
pulldata/generation/: __init__.py
pulldata/llm/: __init__.py  api_llm.py  base.py  local_llm.py  prompts.py
pulldata/parsing/: __init__.py  chunking.py  docx_parser.py  hashing.py  pdf_parser.py  table_extractor.py
pulldata/pipeline/: __init__.py  orchestrator.py
pulldata/rag/: __init__.py  pipeline.py  query_processor.py  retriever.py
pulldata/retrieval/: __init__.py
pulldata/server/: __init__.py  api.py
pulldata/server/static/: app.js  index.html  modal.css  styles.css
pulldata/storage/: __init__.py  hybrid_search.py  metadata_store.py  vector_store.py
pulldata/synthesis/: __init__.py  base.py  report_models.py
pulldata/synthesis/formatters/: __init__.py  excel.py  json_formatter.py  markdown.py  pdf.py  powerpoint.py  styled_pdf.py
pulldata/synthesis/templates/: report_base.html
pulldata/synthesis/templates/styles/: academic.css  executive.css  modernist.css
pulldata/vlm/: __init__.py  vlm_client.py
testdocs/: test.txt
tests/: __init__.py  test_config.py  test_datatypes.py  test_embedding_cache.py  test_embedding_embedder.py  test_embedding_imports.py  test_exceptions.py  test_imports.py  test_parsing_chunking.py  test_parsing_hashing.py  test_parsing_imports.py  test_strip_reasoning_tags.py  test_synthesis_formatters.py
