[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulldata"
version = "0.1.0"
description = "Turn Documents into Deliverables - Text-based RAG with versatile output formats"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "PullData Team"}
]
keywords = [
    "rag",
    "document-processing",
    "pdf-extraction",
    "table-extraction",
    "llm",
    "excel-generation",
    "data-extraction"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Document Parsing
    "PyMuPDF>=1.23.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",

    # Embeddings & Vector Search
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",  # Use faiss-gpu if CUDA available

    # LLM & ML
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "bitsandbytes>=0.41.0",
    "accelerate>=0.24.0",
    "openai>=1.0.0",  # OpenAI-compatible API support

    # Storage Backends
    "psycopg2-binary>=2.9.9",  # PostgreSQL
    "chromadb>=0.4.0",  # ChromaDB

    # Output Generation
    "openpyxl>=3.1.0",
    "XlsxWriter>=3.1.0",
    "python-pptx>=0.6.23",
    "markdown2>=2.4.0",
    "reportlab>=4.0.0",

    # Data Handling
    "pydantic>=2.5.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",

    # Configuration & Environment
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",

    # Logging & CLI
    "loguru>=0.7.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",

    # Utilities
    "tenacity>=8.2.0",  # Retry logic
    "tqdm>=4.66.0",  # Progress bars
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

gpu = [
    "faiss-gpu>=1.7.4",
]

all = [
    "pulldata[dev,gpu]",
]

[project.urls]
Homepage = "https://github.com/pulldata/pulldata"
Documentation = "https://pulldata.readthedocs.io"
Repository = "https://github.com/pulldata/pulldata"
Issues = "https://github.com/pulldata/pulldata/issues"

[project.scripts]
pulldata = "pulldata.cli.main:app"

[tool.setuptools]
packages = ["pulldata"]

[tool.setuptools.package-data]
pulldata = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=pulldata",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "-v",
]

[tool.coverage.run]
source = ["pulldata"]
omit = [
    "*/tests/*",
    "*/benchmarks/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
